# kiwi-rs

./: .gitignore  .neoconf.json  Makefile  README.md
.zed/: settings.json
crates/kiwi-seqlock/: Cargo.toml
crates/kiwi-seqlock/src/: lib.rs
crates/kiwi-syscall/: Cargo.toml
crates/kiwi-syscall/src/: debug.rs  ipc.rs  lib.rs  service.rs
iso/boot/: limine.conf
kernel/: Cargo.toml  build.rs  rust-toolchain.toml
kernel/.cargo/: config.toml
kernel/arch/: Cargo.toml  build.rs
kernel/arch/src/: lib.rs
kernel/arch/src/generic/: cpu.rs  exception.rs  irq.rs  log.rs  memory.rs  mmu.rs  mod.rs  thread.rs  timer.rs  trap.rs
kernel/arch/src/riscv64/: cpu.rs  exception.rs  irq.rs  lang.rs  memory.rs  memory.x  mmu.rs  mod.rs  thread.rs  timer.rs  trap.rs
kernel/arch/src/riscv64/asm/: boot.asm  thread.asm  trap.asm
kernel/arch/src/riscv64/config/: link.ld
kernel/crates/config/: Cargo.toml
kernel/crates/config/src/: lib.rs
kernel/crates/macros/: Cargo.toml
kernel/crates/macros/src/: lib.rs
kernel/crates/seqlock/: Cargo.toml
kernel/crates/seqlock/src/: lib.rs
kernel/src/: config.rs  elf.rs  heap.rs  log.rs  main.rs  pmm.rs  process.rs  task.rs
kernel/src/arch/: mod.rs
kernel/src/arch/generic/: addr.rs  boot.rs  cpu.rs  irq.rs  log.rs  mem.rs  memory.rs  mmu.rs  mod.rs  page.rs  percpu.rs  smp.rs  thread.rs  timer.rs  trap.rs
kernel/src/arch/riscv64/: irq.rs  lang.rs  log.rs  memory.rs  mmu.rs  mod.rs  thread.rs  timer.rs  trap.rs
kernel/src/arch/riscv64/addr/: frame.rs  mod.rs  phys.rs  virt.rs
kernel/src/arch/riscv64/asm/: boot.asm  trap.asm
kernel/src/arch/x86_64/: addr.rs  boot.rs  cpu.rs  gdt.rs  instr.rs  irq.rs  lang.rs  logging.rs  mod.rs  msr.rs  page.rs  percpu.rs  smp.rs  trap.rs  tss.rs
kernel/src/arch/x86_64/asm/: trap.asm
kernel/src/arch/x86_64/config/: kernel.json  link.ld
kernel/src/future/: executor.rs  mod.rs  mutex.rs  task.rs  user.rs  wait.rs  waker.rs
kernel/src/ipc/: message.rs  service.rs
kernel/src/mm/: buddy.rs  heap.rs  mod.rs  page.rs  phys.rs
kernel/src/time/: mod.rs
kernel/src/user/: elf.rs  mod.rs  object.rs  op.rs  ptr.rs  string.rs  syscall.rs
kernel/src/user/syscall/: ipc.rs  mod.rs  service.rs
kernel/src/utils/: align.rs
scripts/: build_iso.sh  build_limine.sh  run_iso.sh  runner.sh
user/: Makefile
user/echo/: Cargo.toml
user/echo/src/: main.rs
user/init/: Cargo.toml  rust-toolchain.toml
user/init/.cargo/: config.toml
user/init/src/: main.rs
user/template/: Cargo.toml
user/template/src/: main.rs
user/xstd/: Cargo.toml
user/xstd/macros/: Cargo.toml
user/xstd/macros/src/: lib.rs
user/xstd/src/: debug.rs  ipc.rs  lib.rs  service.rs  syscall.rs  task.rs
