[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
intrusive-collections = { version = "0.9", default-features = false }
crossbeam = { version = "0.8.4", default-features = false, features = ["alloc"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
elf = { version = "0.8.0", default-features = false}

syscall = { path = "../crates/kiwi-syscall", package = "kiwi-syscall" }

usize_cast = { workspace = true }
hashbrown = { workspace = true }
heapless = { workspace = true }
bitflags = { workspace = true }
zerocopy = { workspace = true }
seqlock = { workspace = true }
macros = { workspace = true }
spin = { workspace = true }
log = { workspace = true }

talc = "4.4"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { version = "0.11", features = ["s-mode"] }
fdt = "0.1.5"
sbi = "0.3.0"

[features]
default = ["logging"]
logging = []

[workspace]
members = [
    "crates/macros",
]

[workspace.dependencies]
zerocopy = { version = "0.8", features = ["alloc", "derive"] }
seqlock = { path = "../crates/kiwi-seqlock", package = "kiwi-seqlock" }
macros = { path = "crates/macros" }
usize_cast = "1.1.0"
hashbrown = "0.16"
bitflags = "2.5.0"
heapless = "0.9.2"
spin = "0.10.0"
log = "0.4.21"

[workspace.lints.rust]
undocumented_unsafe_blocks = "warn"
pedantic = "warn"
all = "warn"

[profile.release]
codegen-units = 1
opt-level = 3
strip = true
lto = true
