[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/macros",
]

[workspace.dependencies]
seqlock = { path = "../crates/kiwi-seqlock", package = "kiwi-seqlock" }
macros = { path = "crates/macros" }

zerocopy = { version = "0.8", features = ["alloc", "derive"] }
arrayvec = { version = "0.7", default-features = false }
usize_cast = "1.1"
bitflags = "2.11"
spin = "0.10.0"
log = "0.4"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"
pedantic = "warn"
all = "warn"

[dependencies]
usize_cast = { workspace = true }
arrayvec = { workspace = true }
bitflags = { workspace = true }
seqlock = { workspace = true }
macros = { workspace = true }
spin = { workspace = true }
log = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
limine = { version = "0.5" }

[features]
default = ["logging"]
logging = []

[lints]
workspace = true

[profile.release]
codegen-units = 1
opt-level = 3
strip = true
lto = true
