[package]
name = "arch"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv-rt = { version = "0.12.2", features = ["s-mode", "single-hart"] }
riscv = "0.11.1"
fdt = "0.1.5"
sbi = "0.2.0"

[features]
default = []
logging = []
