[package]
name = "arch"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { workspace = true }
heapless = { workspace = true }
config = { workspace = true }
spin = { workspace = true }
log = { workspace = true }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { version = "0.11.1", features = ["s-mode"] }
fdt = "0.1.5"
sbi = "0.2.0"

[features]
default = []
logging = []
